styling fixes for border not showing up when scrolling

--- a/src/Main/Admin/AdminPosts/AdminPosts.scss
+++ b/src/Main/Admin/AdminPosts/AdminPosts.scss
@@ -1,11 +1,38 @@
 @import "styles/_mixins.scss";
 
 .admin-posts {
+  height: 100%;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  &__top-bar {
+    height: 51px;
+    display: flex;
+    margin: 1.5rem 0;
+  }
+
+  &__add-post {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+  }
+
   &__post-cards {
+    height: 100%;
+    overflow: auto;
+    position: relative;
+  }
+
+  &__post-cards-inner {
     @include md-screen {
       display: grid;
-      grid-template-columns: 48% 48%;
-      column-gap: 1rem;
+      grid-template-columns: 49% 49%;
+      column-gap: 2%;
     }
   }
 }
